df-derive/tests/fail/144-fail-vec-wrapped-nested-tuple.stderr
error: field `nested` contains a nested tuple whose projection path is wrapped; nested tuples are supported only when each tuple on that path is unwrapped. Hoist the inner tuple into a named struct deriving `ToDataFrame`, or remove the `Option`/`Vec` wrapper around the tuple.
 --> tests/fail/144-fail-vec-wrapped-nested-tuple.rs:7:18
  |
7 |     nested: Vec<((i32, String), bool)>,
  |                  ^^^^^^^^^^^^^
